# Asteroids

./: .gitattributes  .gitignore  CMakeLists.txt  create_project.bat
src/: main.cpp
src/action/: action.cpp  action.h
src/asset_manager/: asset_manager.cpp  asset_manager.h
src/asteroid/: asteroid.cpp  asteroid.h  asteroid_manager.cpp  asteroid_manager.h
src/bullet/: bullet.cpp  bullet.h  bullet_manager.cpp  bullet_manager.h
src/common/: collision_manager.cpp  collision_manager.h  custom_font.cpp  custom_font.h  custom_texture.cpp  custom_texture.h  game_entity.cpp  game_entity.h  health_bar.cpp  health_bar.h
src/entities/: asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  game_entity.h  spaceship.cpp  spaceship.h
src/game_engine/: game_engine.cpp  game_engine.h
src/managers/: asset_manager.cpp  asset_manager.h  asteroid_manager.cpp  asteroid_manager.h  bullet_manager.cpp  bullet_manager.h
src/scenes/: menu_scene.cpp  menu_scene.h  play_scene.cpp  play_scene.h  scene.h
src/spaceship/: spaceship.cpp  spaceship.h
